# Firefly

./: .gitignore  CMakeLists-fmt-test.txt  CMakeLists.txt  CMakeLists.txt.save  CMakeLists.txt.save.1  CMakeLists.txt.txt  CMakeLists.txty  Cholesky_Dense_Matrix  ConjugateGradientSolver.cpp  Doxyfile  ICD  ICD.cpp  README.md  deleteMe.c  eval "$(ssh-agent -s)"  eval "$(ssh-agent -s)".pub  fileprogram  firefly  firefly.cpp  gmsh_reader.c  h origin omakwu  headers.h  main.c  output.txt  tatus  test.msh  user_input.c
.github/workflows/: cmakebasedCI.yml  doxygen.yml
CmakeTest/: CMakeLists.txt  CMakeLists.txt.save  README.md
Resources/: sedov_coarse.asc_mesh
Testing/: cg.cpp
cmake/: AddConjugateGradientTest.cmake  BuildLua.cmake  FindExodus.cmake  FindNetCDF.cmake  FindSeacas.cmake  RunConjugateGradientTest.cmake  add_regression_test.cmake  test_runner.cmake
docker/: Dockerfile
fmt-test/: CMakeLists.txt
scripts/: check_dependencies.sh  install_dependencies.sh
src/: CMakeLists.txt  CRS.cpp  Cholesky_dence.cpp  Dense.cpp  Dense.h  ICD.cpp  Matrix.h  README.md  TestMatrix.cpp  amgcl_solver.cpp  amgcl_solver.hpp  asc.cpp  main.cpp
src/CG/: CGDense.cpp  CGDense.h  CGMatrix.h  CGTestMatrix.cpp  ConjugateGradientSolver.cpp
src/CG/SparseConjugateGradient/: ConjugateGradient.cpp  ConjugateGradient.hpp  Matrix.h  SparseCSR.cpp  SparseCSR.h  testConjugateGradient.cpp
src/ICD/: ICD.cpp  ICD.h
src/ICD/tests/: test_ICD.cpp
src/Include/: asc.h
src/asc/: asc.cpp  asc.h  asc_test.cpp
src/cholesky/: CholeskyCRSeigen.cpp  CholeskyCRSeigen.hpp  Cholesky_CRS.cpp  Cholesky_dence.cpp  Cholesky_dense.cpp  cholesky.hpp  cholesky_CRS.hpp  cholesky_test.cpp  testCholeskyCRSeigen.cpp  test_cholesky_CRS.cpp
src/gmsh/: .gitignore  CMakeLists.txt  README.md  example.msh  gmsh_reader.c  gmsh_writer.c  test.msh
src/laplacian/: CSR.cpp  CSR.hpp  Laplacian.cpp  Laplacian.hpp  testLaplacian.cpp
src/matrix/: CRS.cpp  CRS.h  CSR.cpp  CSR.h  Dense.cpp  Dense.h  Matrix.h  SparseCSR.cpp  SparseCSR.h  matrix.cpp  test_matrix.cpp  text_matrix.cpp
src/ndiff/: diag1.txt  diag2.txt  test_ndiff.cpp
src/ndiff/src/: ndiff-executer.cpp  ndiff-executer.hpp
src/test/: CMakeLists.txt  matrix_generator.hpp  test_amgcl.cpp
src/test/user_input_tests/: CMakeLists.txt  README.md  Running User Input Tests.md  advanced_user_input_test.cpp  test_input_handler.lua  user_input_test.cpp
src/test/user_input_tests/test.bak/: CMakeLists.txt
src/test/user_input_tests/test.bak/user_input_tests/: CMakeLists.txt  Running User Input Tests for Firefly.md  advanced_test_script.lua
src/tests/: test_ICD.cpp
src/user_input/: README.md  input_handler.lua  input_handler.template.lua  user_input.c  user_input.h
src/user_input/logs/: 2025-04-21.md
test/: CMakeLists.txt
tests/: test_ICD.cpp
